# vulkanology

./: Cargo.toml  README.md  build.rs
src/: build_utils.rs  lib.rs
tests/: push_constants.rs  random.rs
tests/shaders/: example.comp  push_constants.comp  random.comp
tests/shaders/random/: random_segment.comp  test_random_next_u64_header.comp  test_random_next_u64_main.comp
