[package]
name = "vulkanology"
description = "A vulkan shader testing framework"
version = "0.1.0"
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"
]
build = "build.rs"
readme = "README.md"
repository = "https://github.com/svenstaro/vulkanology"
keywords = ["shader", "vulkan", "test"]
license = "MIT"

[dev-dependencies]
rand = "0.3.15"
vulkano = "0.3.1"

[build-dependencies]
vulkano-shaders = "0.3.1"
