[package]
name = "vulkanology"
description = "A vulkan shader testing framework"
version = "0.1.0"
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"
]
build = "build.rs"
readme = "README.md"
repository = "https://github.com/svenstaro/vulkanology"
keywords = ["shader", "vulkan", "test"]
license = "MIT"

[dependencies]
vulkano = "0.3.1"
rand = "0.3.15"

[build-dependencies]
# vulkano = "0.3.1"
vulkano-shaders = "0.3.1"
